# linux_dev_special_curs

./: .gitignore  readme.md
01_TerminalProject/: Makefile  Shower.c  text.txt
02_Multifile/: .gitignore  Makefile  fun.c  outlib.h  prog.c
03_Text/: randomize.sh  test_full_chars.txt  test_small.txt
04_Debugging/: .gitignore  Makefile  correct_out_test_A.txt  correct_out_test_B.txt  gdb_test_A.txt  gdb_test_B.txt  range.c
05_Regexps/: .gitignore  Makefile  esub.c
06_Tracing/: .gitignore  Makefile  evil_unlink.c  move.c  test.py
07_Environmental/: Makefile.am  README.txt  configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/src/.deps/: rhasher.Po
08_I18n/: Makefile.am  README.txt  bin_searcher.c  configure.ac
08_I18n/po/: POTFILES.in  ru.po
